# cheeky

./: .gitignore  CMakeLists.txt  README.md  generate_tree.py  main.cpp  patterns.txt
core/: CMakeLists.txt
core/include/core/: logger.h  state.h  util.h
core/src/: state.cpp  util.cpp
loader/: CMakeLists.txt
loader/include/loader/: mach_object.h
loader/src/: mach_object.cpp
ops/: CMakeLists.txt
ops/include/ops/: add.h  adds.h  adrp.h  b.h  base_op.h  bl.h  csinc.h  ldp.h  ldr.h  ldur.h  movz.h  ops.h  orr.h  ret.h  state.h  stp.h  str.h  stur.h  sub.h  subs.h  tbnz.h
ops/src/: add.cpp  adds.cpp  adrp.cpp  b.cpp  base_op.cpp  bl.cpp  csinc.cpp  ldp.cpp  ldr.cpp  ldur.cpp  movz.cpp  orr.cpp  ret.cpp  stp.cpp  str.cpp  stur.cpp  sub.cpp  subs.cpp  tbnz.cpp  test.cpp
session/: CMakeLists.txt
session/include/session/: execution_unit.h  session.h
session/src/: execution_unit.cpp  session.cpp
tests/: CMakeLists.txt  prepare_exec_tests.py
tests/data/: branching.cpp
tests/src/: exec_tests.cpp  ops_test.cpp  ops_tests.cpp
utils/: CMakeLists.txt
utils/include/utils/: util.h
utils/src/: util.cpp
